fix: use small viewport units for better experience on small screens

--- a/src/global.css
+++ b/src/global.css
@@ -54,8 +54,8 @@
 
 html,
 body {
-  height: 100%;
-  width: 100%;
+  height: 100svh;
+  width: 100svw;
 }
 
 body {
